# tobisk-nasfiles

./: .dockerignore  .gitignore  .releaserc.json  Cargo.toml  Dockerfile  README.md  build-info.env  deny.toml  deploy_local.sh  docker-compose.yml
.forgejo/workflows/: ci.yml
crates/nasfiles-core/: Cargo.toml
crates/nasfiles-core/src/: lib.rs  models.rs  safe_path.rs  sigv4.rs  tokens.rs
crates/nasfiles-server/: Cargo.toml  build.rs
crates/nasfiles-server/src/: assets.rs  config.rs  db.rs  main.rs  state.rs
crates/nasfiles-server/src/api/: admin.rs  files.rs  gallery.rs  me.rs  mod.rs  og.rs  profile_tokens.rs  public.rs  shares.rs  thumbnails.rs
crates/nasfiles-server/src/api/s3/: auth.rs  bucket.rs  etag.rs  mod.rs  multipart.rs  object.rs  xml.rs
crates/nasfiles-server/src/auth/: local.rs  middleware.rs  mod.rs  oidc.rs  refresh.rs  session.rs  share_audit.rs
crates/nasfiles-server/src/fs/: archive.rs  file_jobs.rs  image_info.rs  listing.rs  media_info.rs  mod.rs  ops.rs  preview.rs  roots.rs  search.rs  stream.rs  zip.rs
crates/nasfiles-server/src/sftp/: api.rs  keys.rs  mod.rs  server.rs
crates/nasfiles-server/src/shares/: access.rs  audit.rs  bearer.rs  create.rs  mod.rs  model.rs
crates/nasfiles-server/src/thumb/: audio.rs  cache.rs  epub.rs  image.rs  kind.rs  mod.rs  pdf.rs  process.rs  raw.rs  render.rs  storage.rs  svg.rs  text.rs  video.rs
demo/filesystem/: README.md
demo/filesystem/Notes/: field-notes.md  meeting-summary.md  project-kickoff.md  release-notes.md  research-links.md  todo.md
demo/filesystem/Photos/City Light Walk/: README.md
demo/filesystem/Photos/Realistic Landscapes/: README.md
demo/filesystem/Videos/: hallucinated-signal.mkv
docs/: INITIAL_PRD.md  configuration.md  docker-compose.md  security.md  sso-improvements.md  sso.md  truenas.md
docs/examples/: compose.local.yml  compose.sso.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: safe_path.rs
migrations/: 001_initial.sql  002_add_oidc_tokens.sql  003_sftp.sql  004_local_auth.sql  005_file_operations.sql  006_login_attempts_ip_idx.sql  009_s3.sql
scripts/: assemble-screenshots.sh  build-backend.sh  build-frontend.sh  build.sh  demo.sh  dev.sh  start.sh
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: main.tsx  routeTree.gen.ts
web/src/api/: client.ts
web/src/components/: AppLogo.tsx  Breadcrumb.tsx  ColumnBrowser.tsx  ContextMenu.tsx  CreateFolderDialog.tsx  DirectoryReadme.tsx  EmptyState.tsx  ErrorNotice.tsx  FileGrid.tsx  FileList.tsx  FolderTree.tsx  Icon.tsx  MediaPreview.tsx  MiddleEllipsis.tsx  PreviewPane.tsx  RenameDialog.tsx  ShareDialog.tsx  ThumbnailImage.tsx  TopBar.tsx  TransferProgressIndicator.tsx  UploadZone.tsx  UsageRing.tsx
web/src/lib/: fileDrag.ts  icons.ts  qr.ts  shareTarget.ts  totp.ts  transferJobs.ts  webauthn.ts
web/src/routes/: __root.tsx  admin.tsx  index.tsx  profile.tsx  r.$root.$.tsx  s.$token.$.tsx  share-target.tsx
web/src/state/: view.ts
web/src/styles/: globals.css  media-player.css  tokens.css
