[workspace]
members = ["crates/nasfiles-server", "crates/nasfiles-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/opensource/nasfiles"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
rand = "0.9"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
